<resources>
    <string name="app_name">PLChecker</string>
    <string name="title_activity_connect">Connect</string>
    <string name="sendButton">Connect</string>
    <string name="ipAddress">Address IP:</string>
    <string name="rack">Rack:</string>
    <string name="slot">Slot:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="chooseItemTitle">Choose visualisation item:</string>
    <string name="okString">OK</string>
    <string name="IpAddressPlaceholderString">000.000.000.000</string>
    <string name="rackSlotPlaceholderString">0</string>
    <string name="headerConnectionString">CONNECT TO PLC</string>
    <string name="title_activity_house_control">HouseControlActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="db_dialog_title_string">Set parameters of data block.</string>
    <string name="data_block_dialog_string">Data block number:</string>
    <string name="position_dialog_string">Position:</string>
    <string name="dialogDesc">Please fill any empty fields</string>
    <string name="db_string">DB:</string>
    <string name="pos_string">Pos.</string>
    <string name="no_connect_string">Connection could not be Established Check parameters and try again</string>
    <string name="connected_string">Connection established Go to visualisation</string>
</resources>
