<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cristian.inzynierka.ConnectActivity">

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="plcConnect"
        android:text="@string/sendButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/slotEditText"
        app:layout_constraintHorizontal_bias="0.467" />

    <TextView
        android:id="@+id/plcAddressTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/ipAdress"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConnectTextView" />

    <TextView
        android:id="@+id/rackTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/rack"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plcAddressTextView" />

    <TextView
        android:id="@+id/slotTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/slot"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rackTextView" />

    <EditText
        android:id="@+id/addressIPEditText"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:ems="10"
        android:hint="000.000.000.000"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/plcAddressTextView"
        app:layout_constraintLeft_toRightOf="@+id/plcAddressTextView" />

    <EditText
        android:id="@+id/rackEditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/rackTextView"
        app:layout_constraintLeft_toRightOf="@+id/rackTextView"
        android:layout_marginLeft="23dp" />

    <EditText
        android:id="@+id/slotEditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_marginLeft="23dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/slotTextView"
        app:layout_constraintLeft_toRightOf="@+id/slotTextView" />

    <TextView
        android:id="@+id/ConnectTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:text="CONNECT"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="?android:attr/colorEdgeEffect" />

</android.support.constraint.ConstraintLayout>
