<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/inoutlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:id="@+id/inputDBLayout"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <Button
                    android:id="@+id/inDB1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posInTextView1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/inDB2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posInTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/inDB3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posInTextView3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/inDB4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posInTextView4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/inDB5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posInTextView5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/inDB6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posInTextView6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/inDB7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posInTextView7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/inDB8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posInTextView8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/inputButtonsLayout"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/inputButton1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_add_black_24dp"
                    android:contentDescription="@null" />

                <ImageButton
                    android:id="@+id/inputButton2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_add_black_24dp"
                    android:contentDescription="@null" />

                <ImageButton
                    android:id="@+id/inputButton3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_add_black_24dp"
                    android:contentDescription="@null" />

                <ImageButton
                    android:id="@+id/inputButton4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_add_black_24dp"
                    android:contentDescription="@null" />

                <ImageButton
                    android:id="@+id/inputButton5"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_add_black_24dp"
                    android:contentDescription="@null" />

                <ImageButton
                    android:id="@+id/inputButton6"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_add_black_24dp"
                    android:contentDescription="@null" />

                <ImageButton
                    android:id="@+id/inputButton7"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_add_black_24dp"
                    android:contentDescription="@null"/>

                <ImageButton
                    android:id="@+id/inputButton8"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_add_black_24dp"
                    android:contentDescription="@null"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/outputDBLayout"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/outDB1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posOutTextView1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/outDB2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posOutTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/outDB3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posOutTextView3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/outDB4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posOutTextView4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/outDB5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posOutTextView5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/outDB6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posOutTextView6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/outDB7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posOutTextView7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
                <Button
                    android:id="@+id/outDB8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:text="@string/db_string"/>
                <TextView
                    android:id="@+id/posOutTextView8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/pos_string"
                    android:textColor="@color/blackColor"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/outputLayout"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/outputButton1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_add_black_24dp" />

                <ImageButton
                    android:id="@+id/outputButton2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_add_black_24dp" />

                <ImageButton
                    android:id="@+id/outputButton3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_add_black_24dp" />

                <ImageButton
                    android:id="@+id/outputButton4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_add_black_24dp" />

                <ImageButton
                    android:id="@+id/outputButton5"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_add_black_24dp" />

                <ImageButton
                    android:id="@+id/outputButton6"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_add_black_24dp" />

                <ImageButton
                    android:id="@+id/outputButton7"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_add_black_24dp" />

                <ImageButton
                    android:id="@+id/outputButton8"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_add_black_24dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/OK_Button"
        android:text="@string/okString"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"/>
</LinearLayout>

